add artist and song
